databinding on my-test-app
completed and performed four different types of databinding on my-test-app

--- a/basic/my-test-app/src/app/servers/servers.component.html
+++ b/basic/my-test-app/src/app/servers/servers.component.html
@@ -1,2 +1,21 @@
-<p>servers works!</p>
+<p>Servers are initialized</p>
+<p>Add a Server?</p>
+<label for="serverName">Server Name</label>
+<!-- Event binding -->
+<!-- <input 
+    type="text" 
+    class="form-control" 
+    (input)="onUpdateServerName($event)"> -->
+<!-- Two-way-binding -->
+<input 
+    type="text" 
+    class="form-control" 
+    [(ngModel)]="serverName">
+<p>{{ serverCreationStatus }}</p>
+<button 
+    class="btn btn-primary" 
+    [disabled]="!allowNewServer" 
+    (click)="onCreateServer()"
+    >Server+
+</button>
 <app-server></app-server>
