--- a/project/my-food-app/src/app/recipes/recipes.component.html
+++ b/project/my-food-app/src/app/recipes/recipes.component.html
@@ -1,8 +1,16 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list 
+    (recipeWasSelected)="selectedRecipe=$event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail 
+    *ngIf="selectedRecipe; else infoText" 
+    [recipe]="selectedRecipe"></app-recipe-detail>
+    <ng-template #infoText>
+      <div class="alert alert-warning" role="alert" style="border-radius: 20px;">
+        Please select a Recipe!
+      </div>
+    </ng-template>
   </div>
 </div>
