updated my-food-app with directives
Updated the global project my-food-app in angular. Created directives to manage the drop down buttons and toggles also gave a circular design to all elements by setting border radius as 20px.

--- a/project/my-food-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/project/my-food-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,13 +10,14 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button
-        type="button"
+        type="button" 
+        style="border-radius: 20px;"
         class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu" style="border-radius: 20px;">
         <li><a href="#">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
