--- a/project/my-food-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/project/my-food-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,7 +2,7 @@
   href="#"
   class="list-group-item clearfix" 
   (click)="onSelected()"
-  style="border-radius: 20px;">
+  style="border-radius: 20px;margin-bottom: 9px;">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
@@ -15,4 +15,3 @@
       style="max-height: 50px;border-radius: 20px;">
   </span>
 </a>
-<br>
