--- a/project/my-food-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/project/my-food-app/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,18 +4,18 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" class="form-control" style="border-radius: 20px;" #nameInput>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input type="number" id="amount" class="form-control" style="border-radius: 20px;" #amountInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" style="margin:5px;" (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger" type="button" style="margin:5px;">Delete</button>
-          <button class="btn btn" type="button" style="margin:5px;">Clear</button>
+          <button class="btn btn-success" type="submit" style="margin:5px; border-radius: 20px;" (click)="onAddItem()">Add</button>
+          <button class="btn btn-danger" type="button" style="margin:5px; border-radius: 20px;">Delete</button>
+          <button class="btn btn" type="button" style="margin:5px; border-radius: 20px;">Clear</button>
         </div>
       </div>
     </form>
