updated my-food-app with services
Updated the global project my-food-app in angular. Created services to manage the ingredients and recipes, also introduced a rainbow gif background for the pages.

--- a/project/my-food-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/project/my-food-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,7 +18,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" style="border-radius: 20px;">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a style="cursor: pointer;" (click)="onAddToShoppingList()">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -27,11 +27,23 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    {{ recipe.description }}
+    <div class="panel panel-default" style="border-radius: 20px;margin: 5px;background-color: whitesmoke;">
+      <div class="panel-body">
+        {{ recipe.description }}
+      </div>
+    </div>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <a
+        class="list-group-item"
+        style="cursor: pointer;border-radius: 20px;margin-bottom: 5px;background-color: whitesmoke;"
+        *ngFor="let ingredient of recipe.ingredients"
+      >
+        {{ ingredient.name }} <span class="badge badge-secondary">{{ ingredient.amount }}</span>
+      </a>
+    </ul>
   </div>
 </div>
