--- a/project/my-food-app/src/app/shopping-list/shopping-list.component.html
+++ b/project/my-food-app/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit 
-    (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
+    <app-shopping-edit></app-shopping-edit>
     <hr>
+    <div 
+    style="border-radius: 20px;margin-bottom: 5px;display:none;"
+    class="alert alert-warning" 
+    #warningAlert>
+      <strong>Warning!</strong> Duplicate Items present in list.
+    </div>
     <ul class="list-group">
       <a
         class="list-group-item"
